# kakebooR

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  build.rs  index.html
docs/repos/: .gitignore
settings/: base.example.toml  base.toml  local.example.toml  local.toml  production.toml  staging.example.toml
src/: apps.rs  client.rs  config.rs  lib.rs  shared.rs
src/apps/: categories.rs  reports.rs  static_files.rs  transactions.rs
src/apps/categories/: models.rs  serializers.rs  urls.rs  views.rs
src/apps/reports/: serializers.rs  urls.rs  views.rs
src/apps/transactions/: models.rs  serializers.rs  urls.rs  views.rs
src/client/: api.rs  components.rs  lib.rs  pages.rs  router.rs
src/client/components/: dashboard.rs  transactions.rs
src/config/: apps.rs  settings.rs  urls.rs
src/shared/: types.rs
static/: app.js  index.html
