[package]
name = "kakeboor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "manage"
path = "src/bin/manage.rs"

[[bin]]
name = "runserver"
path = "src/bin/runserver.rs"

[dependencies]
# Main Reinhardt framework - use unified crate instead of sub-crates
reinhardt = { path = "docs/repos/reinhardt-web", package = "reinhardt-web", default-features = false, features = ["minimal", "conf", "commands", "db-sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Validation
validator = { version = "0.20", features = ["derive"] }
